# MiniBach

./: .gitignore  README.md  pyproject.toml
minibach/LLM/: generation.ipynb  main_2.ipynb  mintest.ipynb  model.py  plot.py  tokenizer_filtered_reduced.json  training_process.ipynb
minibach/LLM/checkpoint-10000/: rng_state.pth  scheduler.pt  trainer_state.json
minibach/LLM/eval/: gpt2.txt  losses.json  losses_2.json  losses_3.json  losses_4.json  losses_5.json  losses_6.json
minibach/LLM/minGPT_/mingpt/: trainer.py
minibach/LLM/minGPT_/projects/midi/: midi.py
minibach/LLM/runs/checkpoint-1000/: rng_state.pth  scheduler.pt  trainer_state.json
minibach/LLM/runs/checkpoint-2000/: rng_state.pth  scheduler.pt  trainer_state.json
minibach/LLM/runs/checkpoint-3000/: config.json  rng_state.pth  scheduler.pt  trainer_state.json
minibach/LLM/runs/runs/Feb03_15-12-10_Mikol/: events.out.tfevents.1738591931.Mikol.8756.0
minibach/LLM/runs/runs/Feb03_15-17-27_Mikol/: events.out.tfevents.1738592249.Mikol.8756.1
minibach/LLM/runs/runs/Feb03_15-23-19_Mikol/: events.out.tfevents.1738592600.Mikol.8756.2
minibach/LLM/tokenizers/: tokenizer.json  tokenizer_filtered.json  tokenizer_filtered_reduced_half.json
minibach/data/: plotting_loss.py
minibach/data/cherry_picked_gen_res/: 162.mid  24.mid  29.mid  30.mid  8.mid
minibach/preprocessing/: filter_midi_files.py
minibach/tokenization/: CONST.py  test_remi.py  tokenizer.py  tokenizer_training.ipynb
preprocessing/: filter_midi_files.py
(+6 files in other folders)
